# cairntir

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHOS.md  GOVERNANCE.md  HARNESS_AUDIT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
commands/: reason.md  recall.md  remember.md
docs/: _config.yml  cairntir-for-dummies.md  concept.md  conception.md  deprecation-policy.md  how-to-use.md  index.md  integration-guide.md  manifesto.md  publish-checklist.md  roadmap.md
docs/blog/: amnesia-problem.md
docs/journal/: v1.0-to-v1.1-arc.md  wings-state-2026-04-17.md
docs/lineage/: brainstormer.md  mempalace.md
docs/recipes/signal-reader/: README.md  recipe.toml
docs/recipes/signal-reader/examples/: march-2026.md
docs/submissions/: awesome-mcp.md  longmemeval.md
examples/blender-mcp-plugin/: README.md
lineage/brainstormer/: agent-species.md  brainstormer-CLAUDE.md  crucible-SKILL.md  oracle-round-table-transcript.md  project_v1_realization.md  quality-SKILL.md  severity-tiers.md  user_tsc_ethos.md
plans/: purrfect-drifting-sparrow.md  signal-reader.md  v1.1-synergy-stack.md
scripts/: check_no_silent_except.py
src/cairntir/: __init__.py  __main__.py  cli.py  config.py  contracts.py  errors.py  portable.py  register.py  update.py
src/cairntir/daemon/: __init__.py  __main__.py  capture.py  spool.py
src/cairntir/impl/: __init__.py
src/cairntir/mcp/: __init__.py  backend.py  server.py
src/cairntir/memory/: __init__.py  belief.py  consolidate.py  embeddings.py  retrieval.py  store.py  taxonomy.py  temporal.py
src/cairntir/production/: __init__.py  adapters.py
src/cairntir/reason/: __init__.py  loop.py  model.py  ports.py
src/cairntir/recipes/: __init__.py  contract.py  discovery.py  runner.py
src/cairntir/skills/: __init__.py  crucible.md  quality.md  reason.md
tests/: conftest.py
tests/contract/: __init__.py  test_store_contract.py
tests/eval/: test_longmemeval_subset.py
tests/integration/: test_daemon_capture.py  test_mcp_backend.py
tests/property/: test_retrieval_monotonicity.py  test_taxonomy_properties.py
tests/unit/: test_belief.py  test_cli.py  test_consolidate.py  test_embeddings.py  test_mcp_server.py  test_mcp_warmup.py  test_plugin.py  test_portable.py  test_production_adapters.py  test_public_api.py  test_reason_loop.py  test_recipes.py  test_register.py  test_retrieval.py  test_skills.py  test_smoke.py  test_store.py  test_taxonomy.py  test_temporal.py  test_update.py
