[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairntir"
version = "0.1.0.dev0"
description = "Memory-first reasoning layer for Claude Code. Kills cross-chat AI amnesia."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Patrick McGuire", email = "pnmcguire480@users.noreply.github.com" },
]
keywords = [
    "claude",
    "claude-code",
    "mcp",
    "memory",
    "ai",
    "agent",
    "sqlite-vec",
    "reasoning",
    "governance",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "typer>=0.12.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.7.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.8.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/pnmcguire480/cairntir"
Documentation = "https://pnmcguire480.github.io/cairntir/"
Repository = "https://github.com/pnmcguire480/cairntir"
Issues = "https://github.com/pnmcguire480/cairntir/issues"
Changelog = "https://github.com/pnmcguire480/cairntir/blob/main/CHANGELOG.md"

[project.scripts]
cairntir = "cairntir.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cairntir"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "BLE", # flake8-blind-except (NO silent excepts!)
    "TRY", # tryceratops (exception handling)
]
ignore = [
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "TRY003", # Cairntir ethos: exceptions must carry meaningful, surfaced messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = ["sqlite_vec.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cairntir",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "eval: evaluation / benchmark tests",
    "slow: tests that take >1 second",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cairntir"]
branch = true
omit = [
    # Phase 2+ surfaces — covered by their own phase tests.
    "src/cairntir/__main__.py",
    "src/cairntir/cli.py",
    "src/cairntir/mcp/*",
    "src/cairntir/daemon/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
